--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,7 +60,7 @@ align-items: center;
 justify-content: center;
 flex: 0 0 10%;
 height: 10%;
-background-color: #4d2600;
+background-color: #804000;
 }
 
 .boxes {
