History of moves gets created and saved to file. After each move a check of the opponents king can be detected. Bug removed: En passant capture is now only possible in the next move.

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div class="pieces-container" id="promotion">
-		<div class="boxes" id="K"><img class="center" src="../static/image/Chess_nlt60.png"/></img></div>
+		<div class="boxes" id="N"><img class="center" src="../static/image/Chess_nlt60.png"/></img></div>
 		<div class="boxes" id="B"><img class="center" src="../static/image/Chess_blt60.png"/></img></div>
 		<div class="boxes" id="R"><img class="center" src="../static/image/Chess_rlt60.png"/></img></div>
 		<div class="boxes" id="Q"><img class="center" src="../static/image/Chess_qlt60.png"/></img></div>
