--- a/templates/index.html
+++ b/templates/index.html
@@ -14,33 +14,56 @@
 
 </head>
 <body>
-	<div class="pieces-container" id="promotion">
-		<div class="boxes" id="N"><img class="center" src="../static/image/Chess_nlt60.png"/></img></div>
-		<div class="boxes" id="B"><img class="center" src="../static/image/Chess_blt60.png"/></img></div>
-		<div class="boxes" id="R"><img class="center" src="../static/image/Chess_rlt60.png"/></img></div>
-		<div class="boxes" id="Q"><img class="center" src="../static/image/Chess_qlt60.png"/></img></div>
-	</div>
-	<div class="container">
-		{% for key, value in field.items() %}
-			{% if key[:-1]=="top" %}
-					<div class="white-box borderbottom">{{ value[0] }}</div>
-			{% endif %}
-			{% if key[:-1]=="left" %}
-					<div class="white-box borderright">{{ value[0] }}</div>
-			{% endif %}
-			{% if value[0] is none %}
-				<div class="board {{ value[1] }}" id="{{ key }}"></div>
-			{% elif value[2] is not none %}
-				<div class="board {{ value[1] }}" id="{{ key }}"><img class="center" src="../static/image/{{ value[0] }}"/></img></div>
-			{% endif %}
-			{% if key[:-1]=="right" %}
-				<div class="white-box borderleft">{{ value[0] }}</div>
-			{% endif %}
-			{% if key[:-1]=="bottom" %}
-					<div class="white-box bordertop">{{ value[0] }}</div>
-			{% endif %}
-		{% endfor %}
-	</div>
+    <div class="container">
+        <div class="left">
+            {% for key, value in field.items() %}
+                {%  if key=="moving" %}
+                    <div class="board-container" id="{{ value }}">
+                {% else %}
+                    {% if key[:-1]=="top" %}
+                        <div class="white-box borderbottom">{{ value[0] }}</div>
+                    {% endif %}
+                    {% if key[:-1]=="left" %}
+                            <div class="white-box borderright">{{ value[0] }}</div>
+                    {% endif %}
+                    {% if value[0] is none %}
+                        <div class="board {{ value[1] }}" id="{{ key }}"></div>
+                    {% elif value[2] is not none %}
+                        <div class="board {{ value[1] }}" id="{{ key }}"><img class="center" src="../static/image/{{ value[0] }}"/></img></div>
+                    {% endif %}
+                    {% if key[:-1]=="right" %}
+                        <div class="white-box borderleft">{{ value[0] }}</div>
+                    {% endif %}
+                    {% if key[:-1]=="bottom" %}
+                            <div class="white-box bordertop">{{ value[0] }}</div>
+                    {% endif %}
+                {% endif %}
+
+            {% endfor %}
+                    </div>
+        </div>
+        <div class="right">
+            <div class="game-container">
+                <div class="game-boxes"></div>
+                <div class="game-boxes"></div>
+                <!-- for key, value in field.items() %}
+                     if key=="info" %}-->
+                        <div class="game-boxes" id="info"><p> </p></div>
+                    <!-- endif %}
+                 endfor %}-->
+                <div class="game-boxes" id="remis">OFFER DRAW</div>
+                <div class="game-boxes" id="resign">RESIGN</div>
+                <div class="game-boxes" id="newgame">NEW GAME</div>
+            </div>
+
+            <div class="pieces-container" id="promotion">
+            <div class="boxes" id="N"><img class="center" src="../static/image/Chess_nlt60.png"/></img></div>
+            <div class="boxes" id="B"><img class="center" src="../static/image/Chess_blt60.png"/></img></div>
+            <div class="boxes" id="R"><img class="center" src="../static/image/Chess_rlt60.png"/></img></div>
+            <div class="boxes" id="Q"><img class="center" src="../static/image/Chess_qlt60.png"/></img></div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
