Deleted self.field, self.field_info, self.inverse_field_info because of duplicates -> only keep self.board internally for configuration Rewrite function, which creates the board dictionary for the HTML template. Logic was also changed due to too complicated old implementation. Add first unittest file and add a game_lib.py file

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<!--<div class="center">
-	    Press F5 for new game.  Click on any field to start.
+	    Press F5 for new game.  Click on any boardDict to start.
 	</div>-->
 
 
